# settler_of_catan

./: .gitignore  README.md  RESEARCH.md  analysis.py  board.json  calibration.json  live_context.json  pipeline.py  prd.md  pyproject.toml  visualize.py
data/gnn/: model_gat.pt  model_static_gcn.pt  split.pt  train_log.csv  train_log_static.csv
data/processed/: model_gbc.pkl  model_logreg.pkl
ideal_4p_solver/: README.md  ROADMAP.md  __init__.py  action_space.py  belief.py  policy.py  search.py  state.py  training.py
research/gnn_analysis/: REPORT.md  vertex_heatmap.py
research/largest_army_opening/: REPORT.md  analyze.py  summary.json
research/longest_road/: make_graphic.py
research/luck_analysis/: analyze_luck.py  parse_luck.py
research/opening_archetypes/: analyze.py
research/opening_regret/: REPORT.md  analyze.py  compute_regret.py  visualize.py
research/skill_vs_regret/: analyze.py
research/vp_paths/: analyze.py
src/catan/: __init__.py
src/catan/board/: board.py  hex_grid.py
src/catan/colonist_cv/: __init__.py  advisor.py  bootstrap.py  cli.py  context_ocr.py  detector.py  event_log.py  fixture_store.py  geometry.py  ocr.py  opening_live.py  runtime.py  schema.py  (+1 more)
src/catanopeningi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: generate_synthetic_fixture.py  test_board.py  test_colonist_cv.py  test_colonist_cv_bootstrap_opening.py  test_colonist_cv_context_ocr.py  test_colonist_event_log.py  test_features.py  test_fixture_store.py  test_full_solver_engine.py  test_full_solver_rules.py  test_simulation.py
(+23 files in other folders)
